Ders1 dosyasında değişiklik

--- a/ders1.ipynb
+++ b/ders1.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Bir sayı girin -5\n"
@@ -1081,6 +1081,8 @@
     }
    ],
    "source": [
+    "#hackrank.com tutorial\n",
+    "\n",
     "from collections import defaultdict\n",
     "\n",
     "# A ve B gruplarını tanımla\n",
