Ders1 dosyasında değişiklik

--- a/ders1.ipynb
+++ b/ders1.ipynb
@@ -1242,6 +1242,7 @@
     }
    ],
    "source": [
+    "#hackrank.com tutorial\n",
     "def is_leap(year):\n",
     "    leap = False\n",
     "    \n",
