Ders1 dosyasında değişiklik

--- a/ders1.ipynb
+++ b/ders1.ipynb
@@ -1263,8 +1263,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e46e2e69-9d04-4038-83e8-d103382ccd89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print (i),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "46e67d77-5f18-4a56-ba21-ff51a841ef29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hackrank tutorial\n",
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    numbers = []\n",
+    "    for i in range(n):\n",
+    "        numbers.append(i+1)\n",
+    "    result = ''.join(map(str, numbers))\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c81cb520-01a3-41dd-831d-6ea56e34b050",
    "metadata": {},
    "outputs": [],
    "source": []
