Ders1 dosyasında değişiklik

--- a/ders1.ipynb
+++ b/ders1.ipynb
@@ -1924,27 +1924,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "2c68a777-3d39-4d37-acf3-9d66b386c3c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "1015c008-6f6e-431e-b006-b30fc1d55c56",
    "metadata": {},
@@ -1966,6 +1945,7 @@
     }
    ],
    "source": [
+    "#hackerrank.com tutorial\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())  # Listenin uzunluğunu al\n",
     "    arr = list(map(int, input().split()))  # Liste elemanlarını al ve listeye çevir\n",
@@ -1983,8 +1963,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "cc0e1267-207d-4753-821e-5da8684617e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(x):\n",
+    "    x*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "93759da0-c0f9-49d4-a714-7655a321413f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "df92b164-71b8-47d5-aa55-46b7716f6fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1b23a35f-90e6-47c1-af94-eb943e4b020f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    n = int(input())\n",
+    "    for i in range(n):\n",
+    "        print(i+1, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf5cb189-322d-4d82-8eed-cdcce4d69223",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "Buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "Buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hackrank.com challenge\n",
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Complete the 'fizzBuzz' function below.\n",
+    "#\n",
+    "# The function accepts INTEGER n as parameter.\n",
+    "#\n",
+    "\n",
+    "def fizzBuzz(n):\n",
+    "    # Write your code here\n",
+    "    for i in range(n):\n",
+    "        if (i+1)%3==0 and (i+1)%5==0:\n",
+    "            print(\"FizzBuzz\")\n",
+    "        elif (i+1)%3==0:\n",
+    "            print(\"Fizz\")\n",
+    "        elif (i+1)%5 == 0:\n",
+    "            print(\"Buzz\")\n",
+    "        else:\n",
+    "            print(i+1) \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    n = int(input().strip())\n",
+    "\n",
+    "    fizzBuzz(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0f76a3c2-21b6-47b3-afcc-ea1505aa9aac",
+   "id": "6341d17f-6e34-447c-8c1d-8fe3228d1249",
    "metadata": {},
    "outputs": [],
    "source": []
