--- a/ders1.ipynb
+++ b/ders1.ipynb
@@ -2330,7 +2330,103 @@
    "id": "77dd7e5d-f1d6-4b19-837b-15e62b911ab7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Complete the 'numCells' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER.\n",
+    "# The function accepts 2D_INTEGER_ARRAY grid as parameter.\n",
+    "#\n",
+    "\n",
+    "def numCells(grid):\n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in range(rows):\n",
+    "        for j in range(cols):\n",
+    "            current = grid[i][j]\n",
+    "            neighbors = []\n",
+    "\n",
+    "            \n",
+    "            for dx in [-1, 0, 1]:\n",
+    "                for dy in [-1, 0, 1]:\n",
+    "                    if dx == 0 and dy == 0:\n",
+    "                        continue  \n",
+    "                    x, y = i + dx, j + dy\n",
+    "                    if 0 <= x < rows and 0 <= y < cols:\n",
+    "                        neighbors.append(grid[x][y])\n",
+    "            \n",
+    "            \n",
+    "            if all(current > n for n in neighbors):\n",
+    "                count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    grid_rows = int(input().strip())\n",
+    "    grid_columns = int(input().strip())\n",
+    "\n",
+    "    grid = []\n",
+    "\n",
+    "    for _ in range(grid_rows):\n",
+    "        grid.append(list(map(int, input().rstrip().split())))\n",
+    "\n",
+    "    result = numCells(grid)\n",
+    "\n",
+    "    fptr.write(str(result) + '\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c5d982-ee4f-401c-b682-3fc740648093",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, speed, unit):\n",
+    "        self.speed = speed\n",
+    "        self.unit = unit\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Car with the maximum speed of {self.speed} {self.unit}\"\n",
+    "\n",
+    "class Boat:\n",
+    "    def __init__(self, speed):\n",
+    "        self.speed = speed\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Boat with the maximum speed of {self.speed} knots\"\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    q = int(input())\n",
+    "    for _ in range(q):\n",
+    "        tokens = input().split()\n",
+    "        vehicle_type = tokens[0]\n",
+    "        if vehicle_type == \"car\":\n",
+    "            speed = int(tokens[1])\n",
+    "            unit = tokens[2]\n",
+    "            obj = Car(speed, unit)\n",
+    "        elif vehicle_type == \"boat\":\n",
+    "            speed = int(tokens[1])\n",
+    "            obj = Boat(speed)\n",
+    "        print(obj)\n"
+   ]
   }
  ],
  "metadata": {
